# kcomprs

./: .editorconfig  .goreleaser.yaml  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: cli.rs  kmeans.rs  main.rs
src/kmeans/: cluster.rs  model.rs
