[package]
name = "kcomprs"
description = "Reduce the number of colors used in the image using k-mean clustering"
readme = "README.md"
repository = "https://github.com/mawngo/kcomprs"
license = "MIT"
keywords = ["image-processing", "k-means", "color-quantization"]
categories = ["command-line-utilities", "multimedia::images"]
exclude = ["*.png", "*.jpeg"]
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
image = "0.25.9"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.10.0-rc.5"
